# wine-list-tool

./: LICENSE  README.md  docker-compose.yaml  flake.nix  package.json  requirements.txt
backend/: .dockerignore  .sample_env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  sample.env
backend/app/: main.py
backend/app/core/: config.py  logging.py  schemas.py
backend/app/services/: gemini.py  similarity.py  vivino.py
backend/config/: logging_config.json
frontend/: .dockerignore  .prettierignore  Dockerfile  README.md  default.conf  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/docker/: start.sh
frontend/src/: App.jsx  FilterableWineList.jsx  Filters.jsx  FormPage.jsx  LoadingSVG.css  LoadingSVG.jsx  WineList.jsx  index.css  main.jsx  main.tsx  types.ts
frontend/src/components/: Filters.jsx  Filters.tsx  LoadingSVG.jsx  LoadingSVG.tsx  Pagination.tsx  WineList.jsx  WineList.tsx
frontend/src/contexts/: WineContext.jsx  WineContext.tsx  WineContextProvider.jsx  WineContextProvider.tsx
frontend/src/hooks/: useWineContext.tsx
frontend/src/pages/: App.jsx  App.tsx  FilterableWineList.jsx  FilterableWineList.tsx  FormPage.jsx  FormPage.tsx
frontend/src/services/: api.jsx  api.ts
frontend/src/styles/: LoadingSVG.css  WineList.css  index.css
frontend/src/utils/: constants.jsx
src/: App.jsx
