[project]
name = "wine-list-tool-backend"
version = "1.0.0"
description = "FastAPI backend for wine-list-tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "google-genai>=1.22.0",
    "pydantic>=2.11.7",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
